--- a/stock_picking_invoice_link/views/account_invoice_view.xml
+++ b/stock_picking_invoice_link/views/account_invoice_view.xml
@@ -1,24 +1,37 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<odoo>
-    <!-- Copyright 2013-2014 Alexis de Lattre <alexis.delattre@akretion.com>
-         License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
-    <record id="invoice_form" model="ir.ui.view">
-        <field name="name">related.pickings.account.invoice.form</field>
-        <field name="model">account.move</field>
-        <field name="inherit_id" ref="account.view_move_form" />
-        <field name="arch" type="xml">
-            <div name="button_box" position="inside">
-                <field name="picking_ids" invisible="1" />
-                <button
-                    type="object"
-                    name="action_show_picking"
-                    class="oe_stat_button"
-                    icon="fa-truck"
-                    attrs="{'invisible': [('delivery_count', '=', 0)]}"
-                >
-                    <field name="delivery_count" widget="statinfo" string="Delivery" />
-                </button>
-            </div>
-        </field>
-    </record>
-</odoo>
+<?xml version="1.0" encoding="utf-8"?>
+<openerp>
+    <data>
+        <!--
+            Stock Picking Invoice Link module for Odoo
+            Copyright (C) 2013-2014 Akretion (http://www.akretion.com/)
+            @author: Alexis de Lattre <alexis.delattre@akretion.com>
+            The licence is in the file __openerp__.py
+        -->
+
+        <record id="invoice_form" model="ir.ui.view">
+            <field name="name">related.pickings.account.invoice.form</field>
+            <field name="model">account.invoice</field>
+            <field name="inherit_id" ref="account.invoice_form"/>
+            <field name="arch" type="xml">
+                <notebook position="inside">
+                    <page string="Pickings" name="pickings">
+                        <field name="picking_ids"/>
+                    </page>
+                </notebook>
+            </field>
+        </record>
+
+        <record id="invoice_supplier_form" model="ir.ui.view">
+            <field name="name">related.pickings.account.invoice.supplier.form</field>
+            <field name="model">account.invoice</field>
+            <field name="inherit_id" ref="account.invoice_supplier_form"/>
+            <field name="arch" type="xml">
+                <notebook position="inside">
+                    <page string="Pickings" name="pickings">
+                        <field name="picking_ids"/>
+                    </page>
+                </notebook>
+            </field>
+        </record>
+    </data>
+</openerp>
