--- a/stock_picking_invoice_link/views/stock_view.xml
+++ b/stock_picking_invoice_link/views/stock_view.xml
@@ -1,67 +1,45 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<odoo>
-    <!-- stock.picking -->
-    <record id="view_picking_form" model="ir.ui.view">
-        <field name="name">stock_picking_invoice_link.stock.picking.form</field>
-        <field name="model">stock.picking</field>
-        <field name="inherit_id" ref="stock.view_picking_form" />
-        <field name="arch" type="xml">
-            <div name="button_box">
-                <field name="invoice_ids" invisible="1" />
-                <button
-                    type="object"
-                    name="action_view_invoice"
-                    class="oe_stat_button"
-                    icon="fa-pencil-square-o"
-                    attrs="{'invisible': [('invoice_count', '=', 0)]}"
-                >
-                    <field name="invoice_count" widget="statinfo" string="Invoice" />
-                </button>
-            </div>
-        </field>
-    </record>
-    <!-- stock.move -->
-    <record id="view_move_form" model="ir.ui.view">
-        <field name="name">stock_picking_invoice_link.stock.move.form</field>
-        <field name="model">stock.move</field>
-        <field name="inherit_id" ref="stock.view_move_form" />
-        <field name="arch" type="xml">
-            <group name="linked_group" position="after">
-                <group
-                    name="invoice_line"
-                    string="Invoice Lines"
-                    colspan="2"
-                    attrs="{'invisible':[('invoice_line_ids', '=', [])]}"
-                >
-                    <field
-                        name="invoice_line_ids"
-                        nolabel="1"
-                        groups="account.group_account_invoice"
-                        widget="one2many_list"
-                    />
-                </group>
-            </group>
-        </field>
-    </record>
-    <record id="view_move_picking_form" model="ir.ui.view">
-        <field name="name">stock_picking_invoice_link.stock.move.picking.form</field>
-        <field name="model">stock.move</field>
-        <field name="inherit_id" ref="stock.view_move_form" />
-        <field name="arch" type="xml">
-            <group position="after">
-                <group
-                    name="invoice_line"
-                    string="Invoice Lines"
-                    attrs="{'invisible':[('invoice_line_ids', '=', [])]}"
-                >
-                    <field
-                        name="invoice_line_ids"
-                        nolabel="1"
-                        groups="account.group_account_invoice"
-                        widget="one2many_list"
-                    />
-                </group>
-            </group>
-        </field>
-    </record>
-</odoo>
+<?xml version="1.0" encoding="utf-8"?>
+<openerp>
+    <data>
+
+        <!-- stock.picking -->
+        <record id="view_picking_form" model="ir.ui.view">
+            <field name="name">stock_picking_invoice_link.stock.picking.form</field>
+            <field name="model">stock.picking</field>
+            <field name="inherit_id" ref="stock_account.view_picking_inherit_form2"/>
+            <field name="arch" type="xml">
+                <field name="invoice_state" position="after">
+                    <field name="invoice_id" string="Invoice"
+                           groups="account.group_account_invoice"
+                           attrs="{'invisible':[('invoice_state', '=', 'none')]}"
+                           context="{'form_view_ref': invoice_view_xmlid}"/>
+                    <field name="invoice_view_xmlid" invisible="1"/>
+                </field>
+            </field>
+        </record>
+
+        <!-- stock.move -->
+        <record id="view_move_form" model="ir.ui.view">
+            <field name="name">stock_picking_invoice_link.stock.move.form</field>
+            <field name="model">stock.move</field>
+            <field name="inherit_id" ref="stock_account.view_move_form_inherit"/>
+            <field name="arch" type="xml">
+                <field name="invoice_state" position="after">
+                    <field name="invoice_line_id" groups="account.group_account_invoice"/>
+                </field>
+            </field>
+        </record>
+
+        <record id="view_move_picking_form" model="ir.ui.view">
+            <field name="name">stock_picking_invoice_link.stock.move.picking.form</field>
+            <field name="model">stock.move</field>
+            <field name="inherit_id" ref="stock_account.view_move_picking_from_stockaccount_inherit"/>
+            <field name="arch" type="xml">
+                <field name="invoice_state" position="after">
+                    <field name="invoice_line_id" groups="account.group_account_invoice"/>
+                </field>
+            </field>
+        </record>
+
+    </data>
+</openerp>
