[MIG] stock_picking_whole_scrap: Migration to 15.0

--- a/stock_picking_whole_scrap/wizards/stock_picking_whole_scrap.xml
+++ b/stock_picking_whole_scrap/wizards/stock_picking_whole_scrap.xml
@@ -32,6 +32,7 @@
                                 force_save="1"
                                 groups="uom.group_uom"
                             />
+                            <field name="move_line_id" invisible="1" />
                         </tree>
                     </field>
                 </group>
