--- a/stock_picking_invoice_link/views/stock_view.xml
+++ b/stock_picking_invoice_link/views/stock_view.xml
@@ -27,6 +27,7 @@
         <field name="inherit_id" ref="stock.view_move_form" />
         <field name="arch" type="xml">
             <group name="linked_group" position="after">
+                <field name="invoice_line_ids" inivisible="1" />
                 <group
                     name="invoice_line"
                     string="Invoice Lines"
@@ -49,6 +50,7 @@
         <field name="inherit_id" ref="stock.view_move_form" />
         <field name="arch" type="xml">
             <group position="after">
+                <field name="invoice_line_ids" inivisible="1" />
                 <group
                     name="invoice_line"
                     string="Invoice Lines"
