--- a/stock_picking_show_return/views/stock_picking_view.xml
+++ b/stock_picking_show_return/views/stock_picking_view.xml
@@ -5,10 +5,7 @@
         <field name="inherit_id" ref="stock.view_picking_form" />
         <field name="arch" type="xml">
             <notebook position="inside">
-                <page
-                    string="Returns"
-                    attrs="{'invisible': [('returned_ids', '=', [])]}"
-                >
+                <page string="Returns" invisible="not returned_ids">
                     <field name="returned_ids" />
                     <field name="source_picking_id" invisible="1" />
                 </page>
@@ -19,7 +16,7 @@
                     type="object"
                     class="oe_stat_button"
                     icon="fa-truck"
-                    attrs="{'invisible': [('source_picking_id', '=', False)]}"
+                    invisible="not source_picking_id"
                 >
                     <div class="o_form_field o_stat_info">
                         <span class="o_stat_text">Source picking</span>
