--- a/stock_picking_auto_create_lot/views/product_views.xml
+++ b/stock_picking_auto_create_lot/views/product_views.xml
@@ -8,10 +8,7 @@
         <field name="inherit_id" ref="stock.view_template_property_form" />
         <field name="arch" type="xml">
             <field name="tracking" position="after">
-                <field
-                    name="auto_create_lot"
-                    attrs="{'invisible':[('tracking', '=', 'none')]}"
-                />
+                <field name="auto_create_lot" invisible="tracking == 'none'" />
             </field>
         </field>
     </record>
