--- a/stock_picking_invoice_link/views/account_invoice_view.xml
+++ b/stock_picking_invoice_link/views/account_invoice_view.xml
@@ -19,10 +19,10 @@
                     <field name="picking_count" widget="statinfo" string="Delivery" />
                 </button>
             </div>
-            <xpath expr="//field[@name='invoice_line_ids']//tree" position="inside">
+            <xpath expr="//field[@name='invoice_line_ids']//list" position="inside">
                 <field name="move_line_ids" force_save="1" column_invisible="1" />
             </xpath>
-            <xpath expr="//field[@name='line_ids']//tree" position="inside">
+            <xpath expr="//field[@name='line_ids']//list" position="inside">
                 <field name="move_line_ids" force_save="1" column_invisible="1" />
             </xpath>
         </field>
