--- a/stock_picking_auto_create_lot/views/product_views.xml
+++ b/stock_picking_auto_create_lot/views/product_views.xml
@@ -7,9 +7,9 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="stock.view_template_property_form" />
         <field name="arch" type="xml">
-            <field name="tracking" position="after">
+            <xpath expr="//div[field[@name='tracking']]"  position="after">
                 <field name="auto_create_lot" invisible="tracking == 'none'" />
-            </field>
+            </xpath>
         </field>
     </record>
 </odoo>
